# Web-Whisper

./: .gitignore  README.md  crawler_file.py  frontend.py  main.py  pyproject.toml  requirements.txt
data/: page_10.md  page_11.md  page_12.md  page_13.md  page_14.md  page_15.md  page_16.md  page_17.md  page_18.md  page_19.md  page_2.md  page_20.md  page_21.md  page_22.md  page_23.md  page_24.md  page_25.md  page_26.md  page_27.md  page_28.md  page_29.md  page_3.md  page_30.md  page_31.md  page_32.md  page_33.md  page_34.md  page_35.md  page_36.md  page_37.md  page_38.md  page_39.md  page_4.md  page_40.md  page_41.md  page_42.md  page_43.md  page_44.md  page_45.md  page_46.md  (+36 more)
